<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.detail.GameDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/game_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:background="@drawable/image_gradient_overlay" />

            <TextView
                android:id="@+id/game_detail_title_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:shadowColor="#66000000"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="6"
                tools:text="The Witcher 3: Wild Hunt" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:navigationIconTint="@android:color/white"
                app:popupTheme="@style/ThemeOverlay.Material3.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="?attr/colorSurfaceContainerHigh">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/game_detail_rating_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/primary">

                <TextView
                    android:id="@+id/game_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:text="93" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp"
                android:text="@string/released_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_detail_release_date"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnSurfaceVariant"
                tools:text="2015-05-18" />

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp"
                android:text="@string/genres_label"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/game_detail_genres_chipgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:singleLine="false"
                app:chipSpacing="8dp"
                app:singleSelection="false" />

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="20dp"
                android:text="@string/synopsis_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_detail_description"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="6dp"
                android:textColor="?attr/colorOnSurfaceVariant"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
